test: fix retrieval service tests