@@ -1,19 +1,16 @@
 package be.cytomine.service.search;
 
-import java.io.UnsupportedEncodingException;
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.tomakehurst.wiremock.WireMockServer;
 import com.github.tomakehurst.wiremock.client.WireMock;
-import com.vividsolutions.jts.io.ParseException;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.locationtech.jts.io.ParseException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.HttpStatus;
@@ -21,12 +18,15 @@ import org.springframework.http.ResponseEntity;
 
 import be.cytomine.BasicInstanceBuilder;
 import be.cytomine.CytomineCoreApplication;
-import be.cytomine.api.controller.ontology.UserAnnotationResourceTests;
+import be.cytomine.controller.ontology.UserAnnotationResourceTests;
 import be.cytomine.domain.ontology.UserAnnotation;
 import be.cytomine.dto.search.SearchResponse;
-import be.cytomine.service.dto.CropParameter;
 
-import static com.github.tomakehurst.wiremock.client.WireMock.*;
+import static be.cytomine.service.middleware.ImageServerService.IMS_API_BASE_PATH;
+import static be.cytomine.service.search.RetrievalService.CBIR_API_BASE_PATH;
+import static com.github.tomakehurst.wiremock.client.WireMock.urlPathMatching;
+import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
+import static com.github.tomakehurst.wiremock.client.WireMock.urlPathEqualTo;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @SpringBootTest(classes = CytomineCoreApplication.class)
@@ -40,11 +40,23 @@ public class RetrievalServiceTests {
 
     private static WireMockServer wireMockServer;
 
+    private static void setupStub() {
+        /* Simulate call to PIMS */
+        wireMockServer.stubFor(WireMock.post(urlPathMatching(IMS_API_BASE_PATH + "/image/.*/annotation/drawing"))
+            .withRequestBody(WireMock.matching(".*"))
+            .willReturn(aResponse()
+                .withStatus(HttpStatus.OK.value())
+                .withBody(UUID.randomUUID().toString().getBytes())
+            )
+        );
+    }
+
     @BeforeAll
     public static void beforeAll() {
         wireMockServer = new WireMockServer(8888);
         wireMockServer.start();
-        WireMock.configureFor("localhost", 8888);
+
+        setupStub();
     }
 
     @AfterAll
@@ -53,26 +65,11 @@ public class RetrievalServiceTests {
     }
 
     @Test
-    public void index_annotation_with_success() throws ParseException, UnsupportedEncodingException {
+    public void index_annotation_with_success() throws ParseException {
         UserAnnotation annotation = UserAnnotationResourceTests.given_a_user_annotation_with_valid_image_server(builder);
 
-        /* Simulate call to PIMS */
-        String id = URLEncoder.encode(annotation.getSlice().getBaseSlice().getPath(), StandardCharsets.UTF_8);
-        String url = "/image/" + id + "/annotation/crop";
-        String body = "{\"annotations\":{},\"level\":0,\"background_transparency\":0,\"z_slices\":0,\"timepoints\":0}";
-
-        wireMockServer.stubFor(WireMock.post(urlEqualTo(url))
-            .withRequestBody(
-                WireMock.equalToJson(body)
-            )
-            .willReturn(aResponse()
-                .withStatus(HttpStatus.OK.value())
-                .withBody(UUID.randomUUID().toString().getBytes())
-            )
-        );
-
         /* Simulate call to CBIR */
-        String expectedUrlPath = "/api/images";
+        String expectedUrlPath = CBIR_API_BASE_PATH + "/images";
         String expectedResponseBody = "{ \"ids\": [" + annotation.getId() + "]";
         expectedResponseBody += ", \"storage\": " + annotation.getProject().getId().toString();
         expectedResponseBody += ", \"index\": \"annotation\" }";
@@ -88,9 +85,7 @@ public class RetrievalServiceTests {
         );
 
         /* Test index annotation method */
-        CropParameter parameters = new CropParameter();
-        parameters.setFormat("png");
-        ResponseEntity<String> response = retrievalService.indexAnnotation(annotation, parameters, "");
+        ResponseEntity<String> response = retrievalService.indexAnnotation(annotation);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(expectedResponseBody, response.getBody());
@@ -105,7 +100,7 @@ public class RetrievalServiceTests {
         UserAnnotation annotation = builder.given_a_user_annotation();
 
         /* Simulate call to CBIR */
-        String expectedUrlPath = "/api/images/" + annotation.getId();
+        String expectedUrlPath = CBIR_API_BASE_PATH + "/images/" + annotation.getId();
         String expectedResponseBody = "{ \"id\": " + annotation.getId();
         expectedResponseBody += ", \"storage\": " + annotation.getProject().getId().toString();
         expectedResponseBody += ", \"index\": \"annotation\" }";
@@ -132,37 +127,20 @@ public class RetrievalServiceTests {
     }
 
     @Test
-    public void search_similar_images_with_success() throws JsonProcessingException, ParseException,
-        UnsupportedEncodingException {
-        UserAnnotation annotation =
-            UserAnnotationResourceTests.given_a_user_annotation_with_valid_image_server(builder);
-
-        /* Simulate call to PIMS */
-        String id = URLEncoder.encode(annotation.getSlice().getBaseSlice().getPath(), StandardCharsets.UTF_8);
-        String url = "/image/" + id + "/annotation/crop";
-        String body = "{\"annotations\":{},\"level\":0,\"background_transparency\":0,\"z_slices\":0,\"timepoints\":0}";
-
-        wireMockServer.stubFor(WireMock.post(urlEqualTo(url))
-            .withRequestBody(
-                WireMock.equalToJson(body)
-            )
-            .willReturn(aResponse()
-                .withStatus(HttpStatus.OK.value())
-                .withBody(UUID.randomUUID().toString().getBytes())
-            )
-        );
+    public void search_similar_images_with_success() throws JsonProcessingException, ParseException {
+        UserAnnotation annotation = UserAnnotationResourceTests.given_a_user_annotation_with_valid_image_server(builder);
 
         /* Simulate call to CBIR */
         ObjectMapper objectMapper = new ObjectMapper();
-        String expectedUrlPath = "/api/search";
+        String expectedUrlPath = CBIR_API_BASE_PATH + "/search";
         SearchResponse expectedResponse = new SearchResponse(
             annotation.getId().toString(),
-            annotation.getProject().getId().toString(),
             "annotation",
-            Arrays.asList(
-                Arrays.asList(annotation.getId().toString(), 0.0),
-                Arrays.asList("1", 123.0),
-                Arrays.asList("2", 456.0)
+            List.of(annotation.getProject().getId().toString()),
+            List.of(
+                List.of(annotation.getId().toString(), 0.0),
+                List.of("1", 123.0),
+                List.of("2", 456.0)
             )
         );
 
@@ -178,21 +156,13 @@ public class RetrievalServiceTests {
 
         /* Test retrieve similar images method */
         Long neighbours = 2L;
-        CropParameter parameters = new CropParameter();
-        parameters.setFormat("png");
-
         ResponseEntity<SearchResponse> response = retrievalService.retrieveSimilarImages(
             annotation,
-            parameters,
-            "",
             neighbours
         );
 
         expectedResponse.setSimilarities(
-            Arrays.asList(
-                Arrays.asList("1", 73.02631578947368),
-                Arrays.asList("2", 0.0)
-            )
+            List.of(List.of("1", 73.02631578947368), List.of("2", 0.0))
         );
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
